--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "render-test",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "server.js",
 	"type": "module",
 	"scripts": {
 		"dev": "nodemon server.js",
