--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
 	"main": "server.js",
 	"type": "module",
 	"scripts": {
+		"build": "ncc build server.js -o dist",
 		"dev": "nodemon server.js",
+		"start": "node server.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@vercel/ncc": "^0.36.0",
 		"express": "^4.18.2"
 	},
 	"devDependencies": {
