--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@actions/core": "^1.10.0",
+		"@actions/github": "^5.1.1",
 		"@vercel/ncc": "^0.36.0",
 		"express": "^4.18.2"
 	},
